# todo-app-fullstack

./: README.md  docker-compose.yml
todo-app-front/: Dockerfile  package.json
todo-app-front/src/: App.css  App.jsx
todo-app-front/src/components/: Button.css  Button.jsx  Card.css  Card.jsx  Checkbox.css  Checkbox.jsx  Input.css  Input.jsx
todo_app_backend/: Dockerfile  pyproject.toml
todo_app_backend/core/: models.py  serializers.py  urls.py  views.py
todo_app_backend/core/migrations/: 0001_initial.py
todo_app_backend/todo_app_backend/: settings.py  urls.py
